# ArticleRAG

./: .gitignore  README.md  avaliacoes.csv  avaliar.py  dataset.csv  dicas_vini.txt  eval_utils.py  gerar_dataset.py  gerar_respostas_rag.py  metricas.csv  pyproject.toml  rag.py  respostas_rag.csv  run_experimentos.py
.chromadb/: chroma.sqlite3
