[project]
name = "av-fc1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "google-cloud-aiplatform>=1.60.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=1.19.0",
    "pdfplumber>=0.11.10",
    "sentence-transformers>=2.2.2",
]
